added: enroll status hadler

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1624,7 +1624,7 @@ img.logo-wu:hover {
 
 .status.finish {
     padding: 2px 4px;
-    background: #00cc66; /* Green */
+    background: #8de02c; /* Green */
     color: #FFFFFF;
     border-radius: 4px;
     font-size: 14px;
