--- a/registration-app/public/css/detail.css
+++ b/registration-app/public/css/detail.css
@@ -10,6 +10,8 @@
     margin: 0 auto;
     padding: 15px;
     display: flex;
+    background-color: #FFFFFF;
+    border-radius: 15px;
 }
 
 /* Columns */
@@ -56,10 +58,12 @@
 
     .left-column img {
         width: 100%;
+        height: 100%; /* ทำให้รูปภาพเต็มพื้นที่ของ left-column โดยไม่ต้องเสียหายข้อมูล */
+        object-fit: cover; /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ของ left-column */
+        border-radius: 15px;
         top: 0;
         left: 0;
         right: 0;
-        margin-top: 60px;
         position: static;
         opacity: 1;
     }
@@ -117,9 +121,10 @@
     border: 2px solid #E1E8EE;
     border-radius: 6px;
     padding: 5px;
+    margin: 5px;
     font-size: 14px;
     color: #5E6977;
-    background-color: #fff;
+    background-color: #ffffff;
     cursor: pointer;
     transition: all .5s;
 }
@@ -198,18 +203,40 @@
     .right-column {
         width: 100%;
     }
+    .left-column {
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+        height: auto;
+    }
 
     .left-column img {
-        width: 300px;
-        right: 0;
-        top: -65px;
-        left: initial;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px;
+        margin-top: 0;
+        margin-bottom: 0.5px;
     }
 }
-
+@media (max-width: 768px) {
+    .left-column {
+        padding-right: 0; /* ไม่แสดง padding-right สำหรับแท็บเล็ตและโทรศัพท์ */
+    }
+}
 @media (max-width: 535px) {
+    .left-column {
+        display: flex;
+        justify-content: center;
+        align-items: center; 
+        padding-right: 0;
+    }
     .left-column img {
-        width: 220px;
-        top: -85px;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 15px;
+        margin-top: 0;
+        margin-bottom: 0.5px;
     }
 }
