--- a/registration-app/public/css/input.css
+++ b/registration-app/public/css/input.css
@@ -245,7 +245,7 @@
     padding: 0 10px;
     border-radius: 4px;
     z-index: 1;
-    background-color: #E60073;
+    background-color: #1D6F12;
     border: solid 1px #e8e8e82d;
     transition: all .5s cubic-bezier(0.77, 0, 0.175, 1);
 }
