--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -962,7 +962,7 @@
 
 
 
-.properties__caption h3 {
+.properties__caption h5 {
     max-height: 2.8em;
     /* Adjust the height as needed to fit two lines */
     overflow: hidden;
@@ -974,20 +974,6 @@
     -webkit-box-orient: vertical;
     color: #E90073;
 }
-
-.properties__caption h3 {
-    max-height: 2.8em;
-    /* Adjust the height as needed to fit two lines */
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: normal;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    /* Limit the number of lines to 2 */
-    -webkit-box-orient: vertical;
-    color: #E90073;
-}
-
 /* search */
 
 .fixed-search {
@@ -1670,4 +1656,8 @@ img.logo-wu:hover {
     height: 100%;
     width: 100%;
     padding: 10px;
+}
+
+.text-align-start {
+    text-align: left;
 }
