--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -851,6 +851,7 @@
 .properties__img img {
     width: 100%;
     border-radius: 10px 10px 0 0;
+    padding-bottom: 10px;
     /* เพิ่มขอบมนเพื่อทำให้มีรูปร่างของ card */
 }
 
@@ -875,6 +876,7 @@
 
 .courses-area .properties__caption {
     padding: 20px 20px 20px 20px;
+    height: 100%;
 }
 
 .properties__caption a {
@@ -941,7 +943,7 @@
 }
 
 .properties__card:hover {
-    transform: scale(1.02);
+    transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -1504,9 +1506,7 @@ img.logo-wu:hover {
     color: #fff700;
 }
 
-.card-btn {
-    bottom: 0;
-}
+
 
 .card-btn:hover {
     background-color: #d6d6d6;
@@ -1660,4 +1660,11 @@ img.logo-wu:hover {
 
 .text-align-start {
     text-align: left;
+}
+
+
+.properties__skill {
+    border-radius: 5px; 
+    background-color: #f1f1f1;
+    padding: 5px;
 }
