--- a/registration-app/public/css/input.css
+++ b/registration-app/public/css/input.css
@@ -292,14 +292,14 @@
 
 .fixed-form {
     position: fixed;
-    top: 100px;
+    bottom: 40px;
     right: 20px;
     z-index: 1000; /* Adjust as needed */
 }
 
 @media (max-width: 535px) {
     .fixed-form{
-        top: 80px;
+        bottom: 10px;
         right: 10px;
     }
 }
