--- a/registration-app/public/css/detail.css
+++ b/registration-app/public/css/detail.css
@@ -86,7 +86,7 @@
     .left-column img {
         width: 100%;
         height: 100%; /* ทำให้รูปภาพเต็มพื้นที่ของ left-column โดยไม่ต้องเสียหายข้อมูล */
-        object-fit: cover; /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ของ left-column */
+        object-fit: cover;
         border-radius: 15px;
         top: 0;
         left: 0;
@@ -226,6 +226,11 @@
         flex-direction: column;
     }
 
+    .left-column {
+        padding-right: 0;
+        padding-bottom: 10px;
+    }
+
     .left-column,
     .right-column {
         width: 100%;
@@ -248,7 +253,7 @@
 }
 @media (max-width: 768px) {
     .left-column {
-        padding-right: 0; /* ไม่แสดง padding-right สำหรับแท็บเล็ตและโทรศัพท์ */
+        padding-right: 0;
     }
 }
 @media (max-width: 535px) {
