--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1667,3 +1667,21 @@ img.logo-wu:hover {
     background-color: #f1f1f1;
     padding: 5px;
 }
+
+.card-container-notification {
+    width: 90%;
+    box-shadow: 0px 2px 2px black;
+    margin: 0 auto;
+    border-radius: 5px; 
+    padding: 10px;
+}
+
+.card-notification {
+    width: 90%;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
+.card-body-notification {
+    justify-content: space-between;
+}
