--- a/registration-app/public/css/profile.css
+++ b/registration-app/public/css/profile.css
@@ -128,22 +128,11 @@
     width: 10rem;
     position: relative;
     transition: filter 0.3s;
-    /* Add a transition for a smooth effect */
     border-radius: 50%;
-    /* Make the avatar a circle by default */
+    width: 200px;
+    height: 200px;
+    overflow: hidden;
 }
-
-@media (max-width: 768px) {
-    .custom-avatar-xxl {
-        height: 5rem !important;
-        width: 8rem !important;
-        /* Maintain width for ovals */
-        border-radius: 50%;
-        /* Keep the avatar round on smaller screens */
-    }
-}
-
-
 .custom-avatar-xxl:hover {
     filter: brightness(85%);
 }
@@ -157,6 +146,15 @@
     transform: translate(-50%, -50%);
     color: white;
     font-size: 1.5rem;
+}
+
+.profileimg{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #dee2e6 !important;
+    border-width: 2px !important;
+    border-radius: 50% !important;
 }
 
 .custom-avatar {
@@ -250,31 +248,6 @@ th {
     color: #E60073;
 }
 
-/* responsive */
-@media (max-width: 768px) {
-    .custom-skill-card {
-        margin-top: 20px;
-
-    }
-}
-
-@media (max-width: 535px) {
-    .skill {
-        width: calc(50% - 10px);
-        /* คำนวณขนาดของแต่ละส่วนให้แสดง 2 ข้อมูลต่อแถว */
-    }
-
-    .custom-info-card {
-        overflow-x: auto;
-        /* Enable horizontal scrolling */
-    }
-
-    .history table {
-        width: fit-content;
-        /* Set table width to fit the content */
-    }
-}
-
 .contact-container {
     display: flex;
     align-items: center;
@@ -310,6 +283,59 @@ th {
     right: 40px;
     animation: showDot 0.2s linear 0.2s forwards;
     opacity: 0;
+}
+/* responsive */
+@media (max-width: 768px) {
+    .custom-skill-card {
+        margin-top: 20px;
+    }
+    .custom-avatar-xxl {
+        display: flex;
+        justify-content: center; /* จัดเรียงรูปภาพให้อยู่ตรงกลางแนวนอน */
+        align-items: center; /* จัดเรียงรูปภาพให้อยู่ตรงกลางแนวตั้ง */
+        border-radius: 50%; /* เพิ่มคุณสมบัติ border-radius เพื่อทำให้รูปภาพเป็นวงกลม */
+    }
+    .custom-avatar-xxl img {
+        width: 100%; /* ปรับขนาดความกว้างของรูปภาพให้เล็กลง */
+        height: 100%; /* ให้ความสูงของรูปภาพปรับตามอัตราส่วน */
+        border-radius: 50%; /* เพิ่มคุณสมบัติ border-radius เพื่อทำให้รูปภาพเป็นวงกลม */
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 535px) {
+    .skill {
+        width: calc(50% - 10px);
+        /* คำนวณขนาดของแต่ละส่วนให้แสดง 2 ข้อมูลต่อแถว */
+    }
+    .custom-avatar-xxl {
+        display: flex;
+        justify-content: center; /* จัดเรียงรูปภาพให้อยู่ตรงกลางแนวนอน */
+        align-items: center; /* จัดเรียงรูปภาพให้อยู่ตรงกลางแนวตั้ง */
+        border-radius: 50%; /* เพิ่มคุณสมบัติ border-radius เพื่อทำให้รูปภาพเป็นวงกลม */
+    }
+    .custom-avatar-xxl img {
+        width: 100%; /* ปรับขนาดความกว้างของรูปภาพให้เล็กลง */
+        height: 100%; /* ให้ความสูงของรูปภาพปรับตามอัตราส่วน */
+        border-radius: 50%; /* เพิ่มคุณสมบัติ border-radius เพื่อทำให้รูปภาพเป็นวงกลม */
+        object-fit: cover;
+    }
+
+    .custom-info-card {
+        overflow-x: auto;
+        /* Enable horizontal scrolling */
+    }
+
+    .history table {
+        width: fit-content;
+        /* Set table width to fit the content */
+    }
+    .custom-avatar-xxl {
+        border-radius: 50%; /* เพิ่มคุณสมบัติ border-radius เพื่อทำให้รูปภาพเป็นวงกลม */
+    }
+    .custom-avatar-xxl img {
+        border-radius: 50%; /* เพิ่มคุณสมบัติ border-radius เพื่อทำให้รูปภาพเป็นวงกลม */
+    }
 }
 
 @media (max-width: 992px) {
