added enroll list for admin dashboard page

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1732,6 +1732,7 @@ img.logo-wu:hover {
 .btn-cancel {
     background-color: #dfdfdf;
     margin-bottom: 10px;
+    color: red;
 }
 
 .btn-cancel:hover{
