--- a/registration-app/public/css/detail.css
+++ b/registration-app/public/css/detail.css
@@ -52,13 +52,16 @@
     }
 
     .left-column {
-        order: -1; /* Move left-column to the top */
+        order: -1;
+        /* Move left-column to the top */
     }
 
     .left-column img {
         width: 100%;
-        height: 100%; /* ทำให้รูปภาพเต็มพื้นที่ของ left-column โดยไม่ต้องเสียหายข้อมูล */
-        object-fit: cover; /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ของ left-column */
+        height: 100%;
+        /* ทำให้รูปภาพเต็มพื้นที่ของ left-column โดยไม่ต้องเสียหายข้อมูล */
+        object-fit: cover;
+        /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ของ left-column */
         border-radius: 15px;
         top: 0;
         left: 0;
@@ -80,12 +83,14 @@
     }
 
     .left-column {
-        order: -1; /* Move left-column to the top */
+        order: -1;
+        /* Move left-column to the top */
     }
 
     .left-column img {
         width: 100%;
-        height: 100%; /* ทำให้รูปภาพเต็มพื้นที่ของ left-column โดยไม่ต้องเสียหายข้อมูล */
+        height: 100%;
+        /* ทำให้รูปภาพเต็มพื้นที่ของ left-column โดยไม่ต้องเสียหายข้อมูล */
         object-fit: cover;
         border-radius: 15px;
         top: 0;
@@ -235,10 +240,11 @@
     .right-column {
         width: 100%;
     }
+
     .left-column {
         display: flex;
         justify-content: center;
-        align-items: center; 
+        align-items: center;
         height: auto;
     }
 
@@ -251,18 +257,21 @@
         margin-bottom: 0.5px;
     }
 }
+
 @media (max-width: 768px) {
     .left-column {
         padding-right: 0;
     }
 }
+
 @media (max-width: 535px) {
     .left-column {
         display: flex;
         justify-content: center;
-        align-items: center; 
+        align-items: center;
         padding-right: 0;
     }
+
     .left-column img {
         width: 100%;
         height: 100%;
@@ -271,4 +280,27 @@
         margin-top: 0;
         margin-bottom: 0.5px;
     }
+}
+
+.people-icon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 25px;
+    padding: 5px;
+}
+
+.people-icon i {
+    vertical-align: middle;
+}
+
+.people-icon span {
+    margin-left: 5px;
+    vertical-align: middle;
+}
+
+.people-count {
+    font-size: smaller;
 }
