--- a/registration-app/public/css/input.css
+++ b/registration-app/public/css/input.css
@@ -419,4 +419,13 @@
     }
 }
 
-
+.form-card-container {
+    width: 800px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    padding: 35px 35px;
+    backdrop-filter: blur(15px);
+}
