--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -987,6 +987,7 @@
 .properties__card:hover {
     transform: scale(1.05);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 999;
 }
 
 .properties__caption {
