added course type on card

--- a/registration-app/public/css/detail.css
+++ b/registration-app/public/css/detail.css
@@ -282,6 +282,16 @@
     }
 }
 
+.course-type {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    margin: auto;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+
 .people-icon {
     position: absolute;
     top: 10px;
