--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -891,9 +891,12 @@
 }
 
 .properties__img img {
+    display: flex;
+    align-items: center; /* จัดภาพให้อยู่ตรงกลางแนวตั้ง */
     width: 100%;
+    height: 185px;
+    object-fit: contain;
     border-radius: 10px 10px 0 0;
-    padding-bottom: 10px;
 }
 
 .properties__img img:hover {
@@ -905,9 +908,7 @@
 .detail__img img {
     width: 50%;
     border-radius: 10px;
-    /* เพิ่มขอบมนเพื่อทำให้มีรูปร่างของ card */
     margin: 0 auto;
-    /* จัดให้รูปภาพอยู่ตรงกลาง */
 }
 
 .overlay1 {
@@ -921,9 +922,9 @@
 }
 
 .properties__caption a {
+    padding-top: 10px;
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    /* Limit to 2 lines */
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
