--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1769,8 +1769,7 @@ img.logo-wu:hover {
 }
 
 .cancel-noti {
-    color: #ff0000;
-    background-color: rgb(207, 207, 207);
+    color: #E90073;
     height: min-content;
     border: 4px !important;
     margin-right: 5px;
