--- a/registration-app/public/css/detail.css
+++ b/registration-app/public/css/detail.css
@@ -12,10 +12,10 @@
     display: flex;
     background-color: #FFFFFF;
     border-radius: 15px;
-    box-shadow: 0 0 45px rgba(0, 0, 0, .15);
+    box-shadow: 0 0 45px rgba(0, 0, 0, 0.15);
 }
 
-/* Columns */
+/* คอลัมน์ */
 .left-column {
     width: 60%;
     position: relative;
@@ -26,8 +26,7 @@
     width: 35%;
 }
 
-
-/* Left Column */
+/* คอลัมน์ซ้าย */
 .left-column img {
     width: 100%;
     height: 400px;
@@ -43,70 +42,9 @@
     opacity: 1;
 }
 
-@media (max-width: 940px) {
-    .detail-container {
-        flex-direction: column;
-    }
+/* คอลัมน์ขวา */
 
-    .left-column,
-    .right-column {
-        width: 100%;
-    }
-
-    .left-column {
-        order: -1;
-        /* Move left-column to the top */
-    }
-
-    .left-column img {
-        width: 100%;
-        height: 400px;
-        /* ทำให้รูปภาพเต็มพื้นที่ของ left-column โดยไม่ต้องเสียหายข้อมูล */
-        object-fit: contain;
-        /* ปรับขนาดรูปภาพให้ครอบคลุมพื้นที่ของ left-column */
-        border-radius: 15px;
-        top: 0;
-        left: 0;
-        right: 0;
-        position: static;
-        opacity: 1;
-    }
-}
-
-@media (max-width: 768px) {
-    .detail-container {
-        flex-direction: column;
-        max-height: 850px;
-    }
-
-    .left-column,
-    .right-column {
-        width: 100%;
-    }
-
-    .left-column {
-        order: -1;
-        /* Move left-column to the top */
-    }
-
-    .left-column img {
-        width: 100%;
-        height: 400px;
-        object-fit: contain;
-        border-radius: 15px;
-        top: 0;
-        left: 0;
-        right: 0;
-        position: static;
-        opacity: 1;
-    }
-}
-
-
-
-/* Right Column */
-
-/* Product Description */
+/* รายละเอียดสินค้า */
 .product-description {
     border-bottom: 1px solid #E1E8EE;
     margin-bottom: 20px;
@@ -134,7 +72,7 @@
     line-height: 24px;
 }
 
-/* Product Configuration */
+/* การตั้งค่าสินค้า */
 .product-color span,
 .cable-config span {
     font-size: 14px;
@@ -144,9 +82,7 @@
     display: inline-block;
 }
 
-
-
-/* Cable Configuration */
+/* การตั้งค่าสายเคเบิล */
 .cable-choose {
     margin-bottom: 20px;
 }
@@ -160,7 +96,7 @@
     color: #5E6977;
     background-color: #ffffff;
     cursor: pointer;
-    transition: all .5s;
+    transition: all 0.5s;
 }
 
 .cable-choose button:hover,
@@ -203,7 +139,7 @@
     margin-right: 5px;
 }
 
-/* Product Price */
+/* ราคาสินค้า */
 .product-price {
     display: flex;
     align-items: center;
@@ -225,37 +161,11 @@
     color: #FFFFFF;
     text-decoration: none;
     padding: 12px 30px;
-    transition: all .5s;
+    transition: all 0.5s;
 }
 
 .cart-btn:hover {
     background-color: #e60073;
-}
-
-/* Responsive */
-
-@media (max-width: 768px) {
-    .left-column {
-        padding-right: 0;
-    }
-}
-
-@media (max-width: 535px) {
-    .left-column {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding-right: 0;
-    }
-
-    .left-column img {
-        width: 100%;
-        height: 400px;
-        object-fit: contain;
-        border-radius: 15px;
-        margin-top: 0;
-        margin-bottom: 0.5px;
-    }
 }
 
 .course-type {
@@ -302,7 +212,80 @@
 
 .date-label {
     min-width: 120px;
-    /* Adjust the width as necessary */
     display: inline-block;
     font-weight: bold !important;
+}
+
+/* การตอบสนอง */
+@media (max-width: 768px) {
+    .detail-container {
+        flex-direction: column;
+    }
+
+    .left-column,
+    .right-column {
+        width: 100%;
+    }
+
+    .left-column {
+        order: -1;
+        padding-right: 0;
+    }
+
+    .left-column img {
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+        border-radius: 15px;
+        top: 0;
+        left: 0;
+        right: 0;
+        position: static;
+        opacity: 1;
+    }
+}
+
+@media (max-width: 940px) {
+    .detail-container {
+        flex-direction: column;
+    }
+
+    .left-column,
+    .right-column {
+        width: 100%;
+    }
+
+    .left-column {
+        order: -1;
+    }
+
+    .left-column img {
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+        border-radius: 15px;
+        top: 0;
+        left: 0;
+        right: 0;
+        position: static;
+        opacity: 1;
+    }
+}
+
+@media (max-width: 535px) {
+    .left-column {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding-right: 0;
+    }
+
+    .left-column img {
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+        border-radius: 15px;
+        margin-top: 0;
+        margin-bottom: 0.5px;
+    }
 }
